vndb-api-derive/tests/ui/unhandled_types.stderr
error: nested or flattened VNDB fields must use a path type, Option<T>, Vec<T>, Box<T>, or array
 --> tests/ui/unhandled_types.rs:6:10
  |
6 |     str: &'static str,
  |          ^
